Warning May Break - Convert To Classic Yourls
Convert all naming to Classic Yourls for consistency, whilst maintaining backwards compatibility with older versions  of Better-Yourls

--- a/package.json
+++ b/package.json
@@ -1,22 +1,22 @@
 {
-	"name"           : "Better-YOURLs",
-	"private"        : true,
-	"version"        : "1.0.0",
-	"description"    : "Grunt base for the Better YOURLs Plugin.",
-	"dependencies"   : { },
-	"devDependencies": {
-		"grunt"               : "*",
-		"grunt-contrib-uglify": "*",
-		"grunt-contrib-watch" : "*",
-		"grunt-sass"  : "*",
-		"grunt-contrib-cssmin": "*",
-		"load-grunt-tasks"    : "*",
-		"grunt-autoprefixer"  : "*",
-		"grunt-wp-i18n"       : "*"
-	},
-	"author"         : "Chris Wiegman",
-	"repository"     : {
-		"type": "git",
-		"url" : "https://github.com/ChrisWiegman/Better-YOURLS"
-	}
+  "name": "Classic-YOURLS",
+  "private": true,
+  "version": "2.4.0",
+  "description": "Grunt base for the Classic YOURLS Plugin.",
+  "dependencies": {},
+  "devDependencies": {
+    "grunt": "*",
+    "grunt-contrib-uglify": "*",
+    "grunt-contrib-watch": "*",
+    "grunt-sass": "*",
+    "grunt-contrib-cssmin": "*",
+    "load-grunt-tasks": "*",
+    "grunt-autoprefixer": "*",
+    "grunt-wp-i18n": "*"
+  },
+  "author": "Graham McKoen",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/graham55/classic-yourls"
+  }
 }
